# decompress-reader-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/: random.bz2  random.xz  random.zst  text.bz2  text.xz  text.zst
src/: config.rs  error.rs  lib.rs  peek.rs  tests.rs  xz.rs  zstd.rs
src/format/: bzip2.rs  gzip.rs  mod.rs  uncompressed.rs  xz.rs  zstd.rs
