[package]
name = "decompress-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"
repository = "https://github.com/bgilbert/decompress-reader-rs"
license = "Apache-2.0"
exclude = ["/.github", "/.gitignore"]
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
description = "Decompressing reader"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: decompress-reader release {{version}}"
tag-message = "decompress-reader v{{version}}"

[features]
default = ["gzip", "xz", "zstd"]
gzip = ["flate2"]
xz = ["xz2"]
# zstd (implicit)

[dependencies]
bytes = ">= 1.0.1, < 2"
enum_dispatch = "0.3"
thiserror = "1"

flate2 = { version = "1", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = ">= 0.10.0, < 0.12.0", optional = true, features = ["pkg-config"] }

[dev-dependencies]
flate2 = "1"
